# Lighsheet_control

./: .flake8  .gitignore  3D_plot.py  GalvoController.py  LICENSE  MMConfig_demo.cfg  PiControlWidget.py  PiController.py  README.md  ScansWidget.py  SlidesWidget.py  app_functions.py  brillouin_params.yaml  config.yaml  galvo_app.spec  galvo_control.py  galvo_controller.py  galvo_precision.py  main.py  main_widgets.py  notes.md  pi_ni_scan.py  pulse_test.py  pulsing.py  pyproject.toml  restore_napari.spec  signal_waves_test.py  simple_galvo.py  speed_test.py  test_config.py
Brillouin_Tiff/: Brillouin_Z10000_X5000_Y5000.ome.tif  Brillouin_Z10000_X5000_Y6000.ome.tif  Brillouin_Z10000_X5000_Y7000.ome.tif  Brillouin_Z11000_X5000_Y5000.ome.tif  Brillouin_Z11000_X5000_Y6000.ome.tif  Brillouin_Z11000_X5000_Y7000.ome.tif  Brillouin_Z15000_X12000_Y10000.ome.tif  Brillouin_Z15000_X12000_Y10107.ome.tif  Brillouin_Z15000_X12000_Y10214.ome.tif  Brillouin_Z15000_X12000_Y10321.ome.tif  Brillouin_Z15000_X12000_Y10428.ome.tif  Brillouin_Z15000_X12000_Y10535.ome.tif  Brillouin_Z15000_X12000_Y10642.ome.tif  Brillouin_Z15000_X12000_Y10750.ome.tif  Brillouin_Z15000_X12000_Y10857.ome.tif  Brillouin_Z15000_X12000_Y10964.ome.tif  Brillouin_Z15000_X12000_Y11071.ome.tif  Brillouin_Z15000_X12000_Y11178.ome.tif  Brillouin_Z15000_X12000_Y11285.ome.tif  Brillouin_Z15000_X12000_Y11392.ome.tif  Brillouin_Z15000_X12000_Y11500.ome.tif  Brillouin_Z15000_X12125_Y10000.ome.tif  Brillouin_Z15000_X12125_Y10107.ome.tif  Brillouin_Z15000_X12125_Y10214.ome.tif  Brillouin_Z15000_X12125_Y10321.ome.tif  (+56 more)
(+222 files in other folders)
